Homework 4. - Offline mode - pull to refresh - background service

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,8 @@
             android:name=".activities.PhotoGridActivity"
             android:label="Photos">
         </activity>
+
+        <service android:name=".services.InstagramIntentService"></service>
     </application>
 
 </manifest>
